tests/NormalTests/paczka1/small_fuzzy/84892906.err
Error in line 2: LeORxVdT S553 27,9
Error in line 8: jxZjkh A982 1,5
